Edit Progress Report

--- a/doc/DokumenSkripsi/Bab/bab2.tex
+++ b/doc/DokumenSkripsi/Bab/bab2.tex
@@ -644,7 +644,7 @@ Beberapa jenis CSS \textit{Selector} antara lain:
 			Contoh: \texttt{[name]}\\
 			Keterangan: \textit{selector} mendefinisikan elemen dengan atribut ``name''. 
 			
-			\item \textit{\textbf{Simple Attribute}}, memilih atribut elemen dengan nilai tertentu. \textit{Selector} ditampilkan sebagai definisi atribut kemudian diapit dengan kurung siku.
+			\item \textit{\textbf{Exact Value Attribute}}, memilih atribut elemen dengan nilai tertentu. \textit{Selector} ditampilkan sebagai definisi atribut kemudian diapit dengan kurung siku.
 			Contoh: \texttt{[name=Joe]}\\
 			Keterangan: \textit{selector} mendefinisikan elemen dengan atribut ``name'' yang memiliki nilai ``Joe''. 
 		\end{itemize}
