Edit Progress Report

--- a/doc/DokumenSkripsi/Bab/bab3.tex
+++ b/doc/DokumenSkripsi/Bab/bab3.tex
@@ -601,12 +601,12 @@ Diagram kelas analisis untuk IT Student Portal ditunjukkan pada gambar \ref{fig:
 			\caption{Diagram Kelas Analisis IT Student Portal} 
 			\label{fig:3_class_diagram}
 		\end{figure}
-Kelas-kelas dari package SIA Models telah dibahas pada subbab \ref{sec:siamodels}. Sedangkan enjelasan dari kelas-kelas lainnya sebagai berikut:
+Kelas-kelas dari \textit{package} SIA Models telah dibahas pada subbab \ref{sec:siamodels}. Sedangkan penjelasan dari kelas-kelas lainnya sebagai berikut:
 \begin{enumerate}
 	\item Controller\\
 	Kelas ini merupakan kelas yang sudah disediakan oleh Play Framework. Turunan dari kelas ini akan berperan sebagai \textit{controller}.
 	\item Application\\
-	Kelas ini merupakan controller pada IT Student Portal yang berfungsi untuk menghubungkan \textit{model} dengan \textit{view}. 
+	Kelas ini merupakan \textit{controller} pada IT Student Portal yang berfungsi untuk menghubungkan \textit{model} dengan \textit{view}. 
 	\item Scraper\\
 	Kelas ini merupakan kelas yang mengimplementasikan \textit{web scraping} menggunakan \textit{library} jsoup. Kelas ini digunakan untuk memperoleh data dari Portal Akademik Mahasiswa kemudian menghubungkannya ke dalam SIA Models. Data-data yang sudah dihubungkan dengan SIA Models akan ditampilkan ke \textit{view} melalui kelas \texttt{Application}.
 \end{enumerate}
