Edit Progress Report

--- a/doc/DokumenSkripsi/Bab/bab3.tex
+++ b/doc/DokumenSkripsi/Bab/bab3.tex
@@ -502,7 +502,7 @@ Mahasiswa dapat melakukan \textit{logout} dengan cara:
 	\begin{figure}[H]
 			\centering
 			\includegraphics[scale=0.5]{Gambar/case-logout-link}
-			\caption{} 
+			\caption{Elemen ``a'' dengan teks ``logout'' pada Identitas Portal} 
 			\label{fig:3_case_logout_link}
 		\end{figure}
 	\item Setelah diklik, mahasiswa akan diarahkan ke \url{https://studentportal.unpar.ac.id/home/index.logout.php} dengan \textit{cookie} sebagai berikut:
