--- a/doc/DokumenSkripsi/pustaka.bib
+++ b/doc/DokumenSkripsi/pustaka.bib
@@ -1,7 +1,7 @@
 
 % BibTeX Entries
 @book{Leroux:2014,
-	author = {Leroux, Nicolas and Sietse de Kaper},
+	author = {Nicolas Leroux and Sietse de Kaper},
 	isbn = {9781617290909},
 	publisher = {Manning Publications Co.},
 	title = {Play for Java},
@@ -9,7 +9,7 @@
 }
 
 @book{Meyer:2012,
-	author = {Meyer, Eric A.},
+	author = { Eric A. Meyer},
 	isbn = {9781449342494},
 	publisher = {O'Reilly Media},
 	title = {Selectors, Specificity, and the Cascade},
