--- a/doc/DokumenSkripsi/Bab/bab3.tex
+++ b/doc/DokumenSkripsi/Bab/bab3.tex
@@ -230,9 +230,9 @@ pilihan ``Seluruh Tahun Akademik'' untuk melihat seluruh nilai berdasarkan semes
 			\end{figure}
 \end{enumerate}
 
-\section{Analisis Kebutuhan IT Student Portal}
+\section{Analisis Kebutuhan Informatika Student Portal}
 \label{sec:kebutuhan}
-Dalam menganalisis kebutuhan IT Student Portal, penulis melakukan wawancara dengan 18 mahasiswa Program Studi Teknik Informatika UNPAR. Kriteria dari 18 mahasiswa tersebut yaitu sembilan mahasiswa angkatan 2012, delapan mahasiswa angkatan 2013, dan satu mahasiswa angkatan 2014. Setelah melakukan wawancara, penulis memperoleh fitur-fitur yang diinginkan mahasiswa antara lain:
+Dalam menganalisis kebutuhan Informatika Student Portal, penulis melakukan wawancara dengan 18 mahasiswa Program Studi Teknik Informatika UNPAR. Kriteria dari 18 mahasiswa tersebut yaitu sembilan mahasiswa angkatan 2012, delapan mahasiswa angkatan 2013, dan satu mahasiswa angkatan 2014. Setelah melakukan wawancara, penulis memperoleh fitur-fitur yang diinginkan mahasiswa antara lain:
 \begin{enumerate}
 	\item Prasyarat mata kuliah\\
 	Mahasiswa bisa memeriksa prasyarat mata kuliah saat FRS sehingga tidak terjadi kesalahan pengambilan mata kuliah. Prasyarat mata kuliah yang ditampilkan di Portal Akademik Mahasiswa kurang akurat. Selain itu, dari 18 mahasiswa yang diwawancara, hanya ada satu mahasiswa yang mengetahui bahwa Portal Akademik Mahasiswa memiliki fitur prasyarat. Prasyarat mata kuliah untuk Program Studi Teknik Informatika juga tersedia di \url{http://tinyurl.com/lionov}, namun mahasiswa merasa kurang praktis karena harus memeriksa secara manual. Mahasiswa menginginkan agar fitur ini bisa dibuat untuk mempermudah FRS.
@@ -263,7 +263,7 @@ Dalam menganalisis kebutuhan IT Student Portal, penulis melakukan wawancara deng
 	\item Rincian mata kuliah\\
 	Setiap mata kuliah yang dibuka memiliki rincian seperti deskripsi mata kuliah dan jenis mata kuliah yaitu apakah mata kuliah tersebut wajib, pilihan, atau pilihan wajib. Mahasiswa menginginkan fitur ini agar dapat mengetahui mata kuliah apa yang akan dipelajari.
 	\item Tampilan situs web sama di sistem operasi manapun\\
-	Jika tidak menggunakan sistem operasi Windows seperti Linux dan Mac, saat mengakses Portal Akademik Mahasiswa melalui \url{https://studentportal.unpar.ac.id/}, maka mahasiswa akan diarahkan ke \url{https://m.studentportal.unpar.ac.id/} yaitu Portal Akademik Mahasiswa dengan tampilan \textit{mobile} (Gambar \ref{fig:3_pam_mobile}). Tampilan ini tidak memiliki fitur selengkap Portal Akademik Mahasiswa, hanya memiliki fitur pengumunan kuliah, jadwal kuliah, UTS, dan UAS, nilai, IP, dan tagihan. Selain itu, tampilan \textit{mobile} pada telepon seluler akan terlihat sangat kecil sehingga tidak sulit untuk memilih menu. Mahasiswa menginginkan fitur ini agar IT Student Portal dapat diakses di sistem operasi manapun tanpa perubahan tampilan.
+	Jika tidak menggunakan sistem operasi Windows seperti Linux dan Mac, saat mengakses Portal Akademik Mahasiswa melalui \url{https://studentportal.unpar.ac.id/}, maka mahasiswa akan diarahkan ke \url{https://m.studentportal.unpar.ac.id/} yaitu Portal Akademik Mahasiswa dengan tampilan \textit{mobile} (Gambar \ref{fig:3_pam_mobile}). Tampilan ini tidak memiliki fitur selengkap Portal Akademik Mahasiswa, hanya memiliki fitur pengumunan kuliah, jadwal kuliah, UTS, dan UAS, nilai, IP, dan tagihan. Selain itu, tampilan \textit{mobile} pada telepon seluler akan terlihat sangat kecil sehingga tidak sulit untuk memilih menu. Mahasiswa menginginkan fitur ini agar Informatika Student Portal dapat diakses di sistem operasi manapun tanpa perubahan tampilan.
 	\begin{figure}[H]
 			\centering
 			\includegraphics[scale=0.5]{Gambar/pam-mobile}
@@ -322,13 +322,13 @@ Hasil analisis fitur-fitur yang diinginkan berdasarkan kriteria di atas dan bata
     Unggah \textit{Curriculum Vitae}                           & Tidak dibuat & Tidak mendukung Portal Akademik Mahasiswa sebagai sumber informasi akademik                           \\
 		\hline
 		\end{tabular}
-		\caption{Tabel Hasil Analisis Kebutuhan IT Student Portal}
+		\caption{Tabel Hasil Analisis Kebutuhan Informatika Student Portal}
 	\label{tab:3_hasil_fitur}
 \end{table}
 
 
-\section{Analisis Komunikasi Portal Akademik Mahasiswa untuk Fitur IT Student Portal}
-Untuk memenuhi fitur IT Student Portal, penulis menganalisis komunikasi Portal Akademik Mahasiswa ke dalam beberapa kasus yang akan dijelaskan pada subbab-subbab berikut.
+\section{Analisis Komunikasi Portal Akademik Mahasiswa untuk Fitur Informatika Student Portal}
+Untuk memenuhi fitur Informatika Student Portal, penulis menganalisis komunikasi Portal Akademik Mahasiswa ke dalam beberapa kasus yang akan dijelaskan pada subbab-subbab berikut.
 
 \subsection{Kasus \textit{Login}}
 Di Portal Akademik Mahasiswa, mahasiswa dapat \textit{login} dengan cara:
@@ -531,7 +531,7 @@ Diagram \textit{use case} pada perangkat lunak yang akan dibangun hanya mengandu
 		\begin{figure}[H]
 			\centering
 			\includegraphics[scale=0.5]{Gambar/usecase-diagram}
-			\caption{Diagram \textit{Use Case} IT Student Portal} 
+			\caption{Diagram \textit{Use Case} Informatika Student Portal} 
 			\label{fig:3_usecase_diagram}
 		\end{figure}
 Berdasarkan hasil analisis pada subbab \ref{sec:kebutuhan}, dari lima fitur yang akan dibuat, dibentuk tiga \textit{use case} antara lain:
@@ -594,11 +594,11 @@ Berdasarkan hasil analisis pada subbab \ref{sec:kebutuhan}, dari lima fitur yang
 \end{enumerate}
 
 \section{Analisis Kelas}
-Diagram kelas analisis untuk IT Student Portal ditunjukkan pada gambar \ref{fig:3_class_diagram}.
+Diagram kelas analisis untuk Informatika Student Portal ditunjukkan pada gambar \ref{fig:3_class_diagram}.
 	\begin{figure}[H]
 			\centering
 			\includegraphics[scale=0.5]{Gambar/class-diagram}
-			\caption{Diagram Kelas Analisis IT Student Portal} 
+			\caption{Diagram Kelas Analisis Informatika Student Portal} 
 			\label{fig:3_class_diagram}
 		\end{figure}
 Kelas-kelas dari \textit{package} SIA Models telah dibahas pada subbab \ref{sec:siamodels}. Sedangkan penjelasan dari kelas-kelas lainnya sebagai berikut:
@@ -606,7 +606,7 @@ Kelas-kelas dari \textit{package} SIA Models telah dibahas pada subbab \ref{sec:
 	\item Controller\\
 	Kelas ini merupakan kelas yang sudah disediakan oleh Play Framework. Turunan dari kelas ini akan berperan sebagai \textit{controller}.
 	\item Application\\
-	Kelas ini merupakan \textit{controller} pada IT Student Portal yang berfungsi untuk menghubungkan \textit{model} dengan \textit{view}. 
+	Kelas ini merupakan \textit{controller} pada Informatika Student Portal yang berfungsi untuk menghubungkan \textit{model} dengan \textit{view}. 
 	\item Scraper\\
 	Kelas ini merupakan kelas yang mengimplementasikan \textit{web scraping} menggunakan \textit{library} jsoup. Kelas ini digunakan untuk memperoleh data dari Portal Akademik Mahasiswa kemudian menghubungkannya ke dalam SIA Models. Data-data yang sudah dihubungkan dengan SIA Models akan ditampilkan ke \textit{view} melalui kelas \texttt{Application}.
 \end{enumerate}
